# th-compat

./: .travis.yml  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  th-compat.cabal  th-quote.cabal
.github/workflows/: haskell-ci.yml
src/Language/Haskell/TH/Syntax/: Compat.hs  Quote.hs
tests/: Types.hs
tests/Language/Haskell/TH/Syntax/: CompatSpec.hs  QuoteSpec.hs
