cabal-version:       >=1.10
name:                th-quote
version:             0.1
synopsis:            Backward- (and forward-)compatible Quote class
description:         This package defines a "Language.Haskell.TH.Syntax.Quote"
                     module providing a @Quote@ class that works across all
                     versions of @template-haskell@. On recent versions of
                     @template-haskell@ (2.17.0.0 or later), this module simply
                     reexports @Quote@ from "Language.Haskell.TH.Syntax". Refer
                     to the Haddocks for "Language.Haskell.TH.Syntax.Quote" for
                     an example of how to use this module.
homepage:            https://github.com/haskell-compat/th-quote
bug-reports:         https://github.com/haskell-compat/th-quote/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
copyright:           (C) 2020 Ryan Scott
category:            Text
build-type:          Simple
tested-with:         GHC == 7.0.4
                   , GHC == 7.2.2
                   , GHC == 7.4.2
                   , GHC == 7.6.3
                   , GHC == 7.8.4
                   , GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.3
                   , GHC == 8.10.1
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:                git
  location:            https://github.com/haskell-compat/th-quote

library
  exposed-modules:     Language.Haskell.TH.Syntax.Quote
  build-depends:       base             >= 4.3 && < 5
                     , template-haskell >= 2.5 && < 2.18
  if !impl(ghc >= 8.0)
    build-depends:     fail             == 4.9.*
                     , transformers     >= 0.2 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.6)
    ghc-options:       -Wno-star-is-type

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Language.Haskell.TH.Syntax.QuoteSpec
  build-depends:       base             >= 4.3 && < 5
                     , base-compat      >= 0.6 && < 0.12
                     , hspec            >= 2   && < 3
                     , mtl              >= 2.1 && < 2.3
                     , template-haskell >= 2.5 && < 2.18
                     , th-quote
  build-tool-depends:  hspec-discover:hspec-discover >= 2
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
